# job-agent-v2

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
backend/tests/: conftest.py
docs/: bounded_tailoring.md  calibration.md  family_classification.md  master_cv_registration.md  phase_1_api.md  phase_3_evaluation_set.md  project_block_registry.md  release_checklist.md  review_api.md  truth_bank_registration.md  worker_operations.md
docs/architecture_decisions/: ADR-001-canonical-cv-tailoring.md
docs/build_reports/: phase_0b_repository_bootstrap.md  phase_1_queue_skeleton.md  phase_2_real_intake.md  phase_2b_intake_hardening.md  phase_3_real_scoring.md  phase_3b_hybrid_scoring.md  phase_3c_live_llm_transport.md  phase_4_promotion_scheduler.md  phase_5_basic_packet_generation.md
extension/: manifest.json  popup.html  popup.js
extension/scripts/: test-popup.mjs  validate.mjs
frontend/: package.json
frontend/scripts/: build-placeholder.mjs  test-dashboard.mjs
frontend/src/: app.js  index.html  styles.css
jobagent_v2_plan/: architecture.md  build_roadmap.md  data_model.md  pipeline.md  reuse_manifest.md  status_model.md  v1_reference_map.md
master-cvs/: digital_ic_master.tex  ml_master.tex  software_master.tex  verification_master.tex
project/: current.md  history.md  roadmap.md
scripts/: check.py  clear-demo-jobs  clear_demo_jobs.py  demo-local  demo_local.py  demo_seed.py  dev-down  dev-status  dev-up  dev_down.py  dev_status.py  dev_up.py  evaluate_cross_domain_portfolio.py  evaluate_semantic_requirements.py  live_llm_smoke.py  release_smoke.py  semantic-check  semantic-requirements-check  setup-local  setup_local.py
(+88 files in other folders)
