[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jobagent-v2"
version = "0.1.0"
description = "Local-first job scoring and immutable-CV packet generation workflow"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.34,<3",
  "pypdf>=6,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.setuptools.package-data]
jobagent_v2 = [
  "data/*.json",
  "data/evaluation/*.json",
  "data/truth_banks/*.json",
  "templates/*.tex",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend/src", "backend/tests"]
